Documentation and naming

--- a/data_science/TF_System_DS.ipynb
+++ b/data_science/TF_System_DS.ipynb
@@ -1,12 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Timesheet and Feedback system </h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Import libraries</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60fc33d1-67d8-446e-b833-19be15c64de9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing the necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -14,9 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Load the dataset </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a9adf4a4-359f-4051-a819-c599324ff13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d7e7f413-2bae-4d0c-b4b3-13f215dd58b7",
    "metadata": {},
    "outputs": [
     {
@@ -228,14 +247,22 @@
     }
    ],
    "source": [
+    "#convert the data into dataframe\n",
     "df = pd.DataFrame(data)\n",
+    "#display the first five rows of the data\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Check the shape and unique values </h3>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "137425b7-2a7f-43c5-9b1b-5f3aba16e5c6",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +283,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "18680f92-b21c-4da1-a6f7-1c9d1f0f1db8",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +323,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c4909c3c-e684-40f8-82cf-a495e2ffddbd",
    "metadata": {},
    "outputs": [
     {
@@ -335,13 +360,20 @@
     }
    ],
    "source": [
+    "#datatype and non null count of the features\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Check the count of missing values </h3>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6a85f22d-8b1a-4371-938c-4726ca291be5",
    "metadata": {},
    "outputs": [
     {
@@ -380,9 +412,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Univariate Analysis </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5bc971b4-bb89-40cc-97ba-38e1776f04f3",
    "metadata": {},
    "outputs": [
     {
@@ -397,10 +435,12 @@
     }
    ],
    "source": [
-    "#data['ROLE'] = df1['Response'].replace({'1': 'Yes', '0': 'No'})\n",
     "role_counts = df['ROLE'].value_counts()\n",
+    "#define the color palette\n",
     "colors = ['#EDAFFF']\n",
+    "#create a bar plot\n",
     "plt.bar(role_counts.index, role_counts.values, color = colors)\n",
+    "#set the title and axis label\n",
     "plt.xlabel('Role')\n",
     "plt.ylabel('Count')\n",
     "plt.title(' Role Distribution')\n",
@@ -410,7 +450,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "570cbf6b-1e88-472b-8a65-556f5a671638",
    "metadata": {},
    "outputs": [
     {
@@ -466,9 +505,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Feature creation </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "69caa4d8-3c94-49a7-9e94-68ec64447716",
    "metadata": {},
    "outputs": [
     {
@@ -532,14 +577,21 @@
     }
    ],
    "source": [
+    "#create a new feature by adding but other existing features\n",
     "df['TOTAL_HRS'] = df[['MON_HRS', 'TUE_HRS', 'WED_HRS', 'THUR_HRS', 'FRI_HRS', 'SAT_HRS']].sum(axis=1)\n",
     "print(df)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Bivariate Analysis </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c0b11143-491c-4fb4-89a7-5e7ab141e9f5",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +622,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "468a1cf4-df42-4fac-b3b3-e03722faf7de",
    "metadata": {},
    "outputs": [
     {
@@ -785,9 +836,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Drop unnecessary features </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bbac4771-d1a0-444c-bdfd-5bbc17bd2748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +860,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c3b95e78-e738-42b2-8e61-250fb3c6176c",
    "metadata": {},
    "outputs": [
     {
@@ -966,9 +1022,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Feature Engineering </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "20ec2369-18e2-4f3e-a835-e07eedcab1be",
    "metadata": {},
    "outputs": [
     {
@@ -1041,6 +1103,7 @@
     }
    ],
    "source": [
+    "#grouping based on id to calculate total hours by an employee\n",
     "grouped_df = df.groupby('USER_ID')['TOTAL_HRS'].sum().reset_index()\n",
     "grouped_df.head()"
    ]
@@ -1048,7 +1111,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fb5b8ea5-18f0-41ce-b560-4320de2e3eaa",
    "metadata": {},
    "outputs": [
     {
@@ -1213,6 +1275,7 @@
     }
    ],
    "source": [
+    "#Create a new feature to find who are working on projects and who are not\n",
     "df['project_assigned'] = grouped_df['TOTAL_HRS'].apply(lambda x: 'bench' if x == 0 else 'billable')\n",
     "df.head()"
    ]
@@ -1220,7 +1283,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ce589980-8dc5-419c-9a81-dddf08633e0c",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1309,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "75b3503e-47fe-44b6-97d4-438cc0f6ba8b",
    "metadata": {},
    "outputs": [
     {
@@ -1262,6 +1323,7 @@
     }
    ],
    "source": [
+    "#drop the duplicates of each user\n",
     "df.drop_duplicates(subset='USER_ID', keep='first', inplace=True)\n",
     "df.shape"
    ]
@@ -1269,7 +1331,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a6d61870-6549-4afe-ad06-fffe8d35590c",
    "metadata": {},
    "outputs": [
     {
@@ -1284,10 +1345,13 @@
     }
    ],
    "source": [
+    "#create a new feature to monitor the attendance\n",
     "df['status'] = df['TOTAL_HRS'].apply(lambda x: 'Regularized' if x >= 45 else 'Not Regular')\n",
     "attendances = df['status'].value_counts()\n",
     "colors = ['#EDAFFF']\n",
+    "#create a bar plot\n",
     "plt.bar(attendances.index, attendances.values, color = colors)\n",
+    "#set the title and axis label\n",
     "plt.xlabel('Attendances')\n",
     "plt.ylabel('Count')\n",
     "plt.title(' Attendances Distribution')\n",
@@ -1297,7 +1361,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f10ea70a-0221-42fe-956d-0385aa75045d",
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1396,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b583964a-9aff-45d0-a23e-e8e142534ab9",
    "metadata": {},
    "outputs": [
     {
@@ -1371,9 +1433,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Label Encoding </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ad68ad87-d7a7-4e5c-ac58-2f049c238412",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1472,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6a26eaad-0d5b-4404-91b6-4e80b812a7f9",
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1648,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "aabb0ae5-f10a-41a6-a1e5-88ad142d30ec",
    "metadata": {},
    "outputs": [
     {
@@ -1618,33 +1684,26 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "df['project_assigned'] = df['project_assigned'].astype(str)\n",
     "df['status'] = df['status'].astype(str)\n",
-    "# df['PROJECT_ID'] = df['PROJECT_ID'].astype(str)\n",
-    "# df['Q1'] = df['Q1'].astype(str)\n",
-    "# df['Q2'] = df['Q2'].astype(str)\n",
-    "# df['Q3'] = df['Q3'].astype(str)\n",
-    "# df['Q4'] = df['Q4'].astype(str)\n",
-    "# df['Q5'] = df['Q5'].astype(str)\n",
-    "# df.isnull().sum()\n",
     "\n",
     "# Initialize LabelEncoder\n",
     "label_encoder = LabelEncoder()\n",
     "\n",
-    "# Fit and transform the \"Vehicle_Age\" column\n",
+    "# Fit and transform the columns\n",
     "df['project_assigned'] = label_encoder.fit_transform(df['project_assigned'])\n",
     "df['status'] = label_encoder.fit_transform(df['status'])\n",
-    "# df['PROJECT_ID'] = label_encoder.fit_transform(df['PROJECT_ID'])\n",
-    "# df['Q1'] = label_encoder.fit_transform(df['Q1'])\n",
-    "# df['Q2'] = label_encoder.fit_transform(df['Q2'])\n",
-    "# df['Q3'] = label_encoder.fit_transform(df['Q3'])\n",
-    "# df['Q4'] = label_encoder.fit_transform(df['Q4'])\n",
-    "# df['Q5'] = label_encoder.fit_transform(df['Q5'])\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Correlation Matrix </h3>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "586aeff9-9885-4bbd-a0de-0424460aeec8",
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1734,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "65b51e3a-3610-419a-b5ff-7c548311d62c",
    "metadata": {},
    "outputs": [
     {
@@ -1711,20 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "8cd5dcf1-93e1-4e76-a0e5-2721ddbb69d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_cleaned = df.dropna()\n",
-    "# df = df_cleaned\n",
-    "# df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
-   "id": "961b6a05-c17b-4abf-a02d-0d3ee6e3e944",
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1790,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8ec91b84-7848-416f-97fc-e0b90431ad04",
    "metadata": {},
    "outputs": [
     {
@@ -1783,9 +1827,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Chi Square Test </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "f7be11ef-988b-4360-b456-8a91e280985a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +1845,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a35832eb-f777-49bb-a2a6-b90d395161c8",
    "metadata": {},
    "outputs": [
     {
@@ -1824,6 +1873,8 @@
     "columns.remove('PROJECT_NAME')\n",
     "columns.remove('USER_NAME')\n",
     "columns.remove('ROLE')\n",
+    "\n",
+    "#chi square for the status feature\n",
     " \n",
     "from scipy.stats import chi2_contingency\n",
     "contingency_table = pd.crosstab(df1['USER_ID'], df1['status']).to_numpy()\n",
@@ -1861,7 +1912,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f064723e-b79d-4194-b2f6-50347257ce22",
    "metadata": {},
    "outputs": [
     {
@@ -1891,6 +1941,7 @@
     "columns.remove('USER_NAME')\n",
     "columns.remove('ROLE')\n",
     " \n",
+    "#chi square for the project_assigned feature\n",
     "from scipy.stats import chi2_contingency\n",
     "contingency_table = pd.crosstab(df1['USER_ID'], df1['project_assigned']).to_numpy()\n",
     " \n",
@@ -1925,9 +1976,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> Machine Learning Model </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "81616256-6228-4592-8e7b-fba25ab1d1d6",
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +2013,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "45fa5cf3-5d31-422a-995f-54778a28daf1",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +2052,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d8506c6b-29c2-4b55-a6aa-c859341df967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2006,7 +2061,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "53cf5c9a-a09d-4c6d-b4a1-0cf9a2486e47",
    "metadata": {},
    "outputs": [
     {
@@ -2047,6 +2101,8 @@
     }
    ],
    "source": [
+    "#xgboost model\n",
+    "\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import xgboost as xgb\n",
@@ -2083,7 +2139,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "058e8cb9-29a8-4f5f-b986-093f8add12f3",
    "metadata": {},
    "outputs": [
     {
@@ -2152,6 +2207,7 @@
     }
    ],
    "source": [
+    "#Decision Tree model\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import GridSearchCV, train_test_split\n",
     "\n",
@@ -2183,7 +2239,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ddb426fa-fb35-4bc9-ba94-c1bdf13c5c74",
    "metadata": {},
    "outputs": [
     {
@@ -2195,6 +2250,7 @@
     }
    ],
    "source": [
+    "#Random forest classfier\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -2222,7 +2278,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "257280a1-4645-4639-b8ed-a137b0877840",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2230,7 +2285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2244,7 +2299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
